--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "لTigerMuisc5",
+  "name": "TigerMuisc44",
   "version": "1.0.0",
-  "description": "TigerMusic5",
+  "description": "TigerMusic44",
   "main": "bot.js",
   "dependencies": {
     "node": "8.x",
